APIs/googleapis.com/displayvideo/v1/java-client/docs/SensitiveCategoryTargetingOptionDetails.md


# SensitiveCategoryTargetingOptionDetails

Represents a targetable sensitive category. This will be populated in the sensitive_category_details field of the TargetingOption when targeting_type is `TARGETING_TYPE_SENSITIVE_CATEGORY_EXCLUSION`.

## Properties

| Name | Type | Description | Notes |
|------------ | ------------- | ------------- | -------------|
|**sensitiveCategory** | [**SensitiveCategoryEnum**](#SensitiveCategoryEnum) | Output only. An enum for the DV360 Sensitive category content classifier. |  [optional] [readonly] |



## Enum: SensitiveCategoryEnum

| Name | Value |
|---- | -----|
| UNSPECIFIED | &quot;SENSITIVE_CATEGORY_UNSPECIFIED&quot; |
| ADULT | &quot;SENSITIVE_CATEGORY_ADULT&quot; |
| DEROGATORY | &quot;SENSITIVE_CATEGORY_DEROGATORY&quot; |
| DOWNLOADS_SHARING | &quot;SENSITIVE_CATEGORY_DOWNLOADS_SHARING&quot; |
| WEAPONS | &quot;SENSITIVE_CATEGORY_WEAPONS&quot; |
| GAMBLING | &quot;SENSITIVE_CATEGORY_GAMBLING&quot; |
| VIOLENCE | &quot;SENSITIVE_CATEGORY_VIOLENCE&quot; |
| SUGGESTIVE | &quot;SENSITIVE_CATEGORY_SUGGESTIVE&quot; |
| PROFANITY | &quot;SENSITIVE_CATEGORY_PROFANITY&quot; |
| ALCOHOL | &quot;SENSITIVE_CATEGORY_ALCOHOL&quot; |
| DRUGS | &quot;SENSITIVE_CATEGORY_DRUGS&quot; |
| TOBACCO | &quot;SENSITIVE_CATEGORY_TOBACCO&quot; |
| POLITICS | &quot;SENSITIVE_CATEGORY_POLITICS&quot; |
| RELIGION | &quot;SENSITIVE_CATEGORY_RELIGION&quot; |
| TRAGEDY | &quot;SENSITIVE_CATEGORY_TRAGEDY&quot; |
| TRANSPORTATION_ACCIDENTS | &quot;SENSITIVE_CATEGORY_TRANSPORTATION_ACCIDENTS&quot; |
| SENSITIVE_SOCIAL_ISSUES | &quot;SENSITIVE_CATEGORY_SENSITIVE_SOCIAL_ISSUES&quot; |
| SHOCKING | &quot;SENSITIVE_CATEGORY_SHOCKING&quot; |



